fix: Align markdown quote border color

--- a/client/src/styles.module.scss
+++ b/client/src/styles.module.scss
@@ -174,6 +174,7 @@
   }
 
   .yfm {
+    --yfm-color-accent: #2185d0 !important;
     --yfm-color-link: #1e70bf !important;
     --yfm-color-text: #17394d !important;
     --yfm-font-family-monospace: ui-monospace, SFMono-Regular, SF Mono, Menlo, Consolas, Liberation Mono, monospace !important;
